# phoenix-firmware

Jetson/ros2/src/my_srv_class/: CMakeLists.txt  package.xml
Jetson/ros2/src/my_srv_class/src/: my_srv_main.cpp  udp.cpp  udp.hpp
Jetson/ros2/src/phoenix/include/phoenix/: stream_data.hpp
Jetson/ros2/src/phoenix/launch/: all.py
Jetson/ros2/src/phoenix/src/: adc3_main.cpp  command_main.cpp  stream_main.cpp
Jetson/ros2/src/phoenix_gui/src/: gamepad_thread.cpp  image_viewer.cpp  main_window.cpp  node_thread.cpp
Jetson/ros2/src/phoenix_gui/src/cintelhex/: ihex_parse.c
